feat/expose current floor holder
